fix spacing on h2 of journal entries to 1rem

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ ul {
   font-size: 1.5rem;
   font-weight: bold;
   margin-top: 0;
+  margin-bottom: 1rem;
 }
 
 .entry-description {
